--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "/assets/webfont/cryptocoins-colors.css";
 @import "/assets/webfont/cryptocoins.css";
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
