--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,75 +1,36 @@
-<div class="title">
-  <h1>Cryptocurrency Market Capitalizations</h1>
+<div class="app-container" [class.app-is-mobile]="mobileQuery.matches">
+  <mat-toolbar color="primary" class="app-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <h1 class="app-name">Crypto Wallet</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container class="app-sidenav-container"
+                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [opened]="true"
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+      <mat-nav-list>
+        <a mat-list-item routerLink="market">
+          <div class="item-side">
+              <div><i class="material-icons">timeline</i></div>
+              <div>Market</div>
+          </div>
+        </a>
+        <a mat-list-item routerLink="wallet">
+          <div class="item-side">
+            <div><i class="material-icons">account_balance_wallet</i></div>
+            <div>Wallet</div>
+          </div>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
 
-<div class="example-header">
-  <mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-  </mat-form-field>
-  <div class="button-row">
-    <button mat-raised-button color="primary" (click)="openDialog()">Add</button>
-  </div>
-</div>
 
-<div class="example-container mat-elevation-z8" *ngIf="dataSource">
-
-  <mat-table [dataSource]="dataSource" matSort>
-
-    <ng-container matColumnDef="rank">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Rank </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.rank}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <i class="cc {{row.symbol}}"></i> {{row.name}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="market_cap_usd">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Market Cap </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.market_cap_usd | currency:'USD':'symbol':'4.0-2' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="price_usd">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Price $ </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.price_usd | currency:'USD':'symbol':'0.0-7' }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="volume_usd">
-      <mat-header-cell *matHeaderCellDef > 24h Volume </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        {{row.volume_usd | currency:'USD':'symbol':'4.0-2' }}
-      </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="available_supply">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Available Supply </mat-header-cell>
-      <mat-cell *matCellDef="let row" > {{row.available_supply | number:'3.0-5'}} {{row.symbol}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="percent_change_1h">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Change 1h </mat-header-cell>
-      <mat-cell [ngClass]="cssClassPercentage(row.percent_change_1h)" *matCellDef="let row" [style.color]="row.percent_change_1h" >
-        {{row.percent_change_1h}}% </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="percent_change_24h">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Change 24h </mat-header-cell>
-      <mat-cell [ngClass]="cssClassPercentage(row.percent_change_24h)" *matCellDef="let row" [style.color]="row.percent_change_24h">
-        {{row.percent_change_24h}}% </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="percent_change_7d">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Change 7d </mat-header-cell>
-      <mat-cell [ngClass]="cssClassPercentage(row.percent_change_7d)" *matCellDef="let row" [style.color]="row.percent_change_7d" >
-        {{row.percent_change_7d}}%
-      </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;">
-    </mat-row>
-  </mat-table>
-
-  <mat-paginator [pageSize]="100" [pageSizeOptions]="[5, 10, 25, 100]" length="2000" (page)="pageEvent($event)"></mat-paginator>
-</div>
