--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-@import "./assets/webfont/cryptocoins-colors.css";
-@import "./assets/webfont/cryptocoins.css";
+@import "assets/webfont/cryptocoins-colors.css";
+@import "assets/webfont/cryptocoins.css";
 
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
